create github pages

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body{font-family: Source Sans Pro;}blockquote{border-color: #000000;}div[submit-
                                 </div></div>
                         
                     </amp-img>
-                    <h2 class="card-title mbr-fonts-style mbr-bold align-center display-3">Coming Soon</h2>
+                    <h2 class="card-title mbr-fonts-style mbr-bold align-center display-3">Coming Soonish</h2>
                     
                     <div class="card-img">
                         <amp-img class="mobirise-loader" src="assets/images/photo-1496262967815-132206202600-1104x694.jpg" layout="responsive" width="552" height="347" alt="Coming Soon">
