create github pages

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@ body{font-family: Source Sans Pro;}blockquote{border-color: #000000;}div[submit-
   <script async  src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
   
-  <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
-<script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us20.list-manage.com","uuid":"fbac988452c70f5dd360b87ab","lid":"bf5bc94d55","uniqueMethods":true}) })</script>
+  <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us20.list-manage.com","uuid":"fbac988452c70f5dd360b87ab","lid":"571ce593ca","uniqueMethods":true}) })</script>
 </head>
 <body>
   <section class="content1 cid-rl1YFdk2vs" id="content1-9">
