create github pages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html amp>
+<html amp >
 <head>
   
   <meta charset="UTF-8">
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/pixalatte6-128x108.png" type="image/x-icon">
   <meta name="description" content="">
+  
   <title>Home</title>
   
 <link rel="canonical" href="https://pixalatte.github.io/pixalatte/">
@@ -35,7 +36,7 @@ body{font-family: Source Sans Pro;}blockquote{border-color: #000000;}div[submit-
         <div class="mbr-row mbr-justify-content-center">
             <div class="card mbr-col-sm-12 mbr-col-md-10">
                 <div class="card-wrapper">
-                    <amp-img class="face mobirise-loader" src="assets/images/pixalatte6-100x85.jpg" layout="responsive" width="113.8529411764706" height="98" alt="Mobirise">
+                    <amp-img class="face mobirise-loader" src="assets/images/pixalatte-logo-228x193.png" layout="responsive" width="114.59067357512953" height="97" alt="Pixalatte">
                         <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -44,10 +45,10 @@ body{font-family: Source Sans Pro;}blockquote{border-color: #000000;}div[submit-
                                 </div></div>
                         
                     </amp-img>
-                    <h2 class="card-title mbr-fonts-style mbr-bold align-center display-3">Coming Soonish</h2>
+                    <h2 class="card-title mbr-fonts-style mbr-bold align-center display-3">Coming Soon</h2>
                     
                     <div class="card-img">
-                        <amp-img class="mobirise-loader" src="assets/images/photo-1496262967815-132206202600-1104x694.jpg" layout="responsive" width="552" height="347" alt="Coming Soon">
+                        <amp-img class="mobirise-loader" src="assets/images/ben-kolde-430912-unsplash-1104x1104.jpg" layout="responsive" width="552" height="552" alt="Coming Soon">
                             <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
