--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="#">
+                    <a href="index.html">
                         <span class="p-2 mbr-iconfont socicon-pixiv socicon" style="color: rgb(19, 57, 150); fill: rgb(19, 57, 150);"></span>
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption mbr-bold text-primary display-5" href="#">IXALATTE</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption mbr-bold text-primary display-5" href="index.html">IXALATTE</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -354,7 +354,7 @@
                 </div>
             </div>
             <div class="col-lg-6 my-auto pb-4 mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="vdVCuzbYQnapbmB9sC2+jger0I7kn8IovBsEmT4QT8zq2p1CD5km0eaxOT3Ye1bn8nt0oZUb3akCkOuLKQu2PyxmXPikBKPd9cDNIOSRpttD5765I97WVaYBHpumjUiF.pmJuxzX/qtbY7bcer8LHi5NrKfkN4ugBsKidPw0Flj5HymhLA9X/wUmIs34ibrqaaNdAger84eeHAXSe4neGfHQFz7LUM/9rYFp6qzynBmKgU+1KQbbvEM/MVs0nSPjF">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="W5+d36BLIChssNalJGlQUMd3gQcilJ6RsZ6DZqzsj90zIpbty9JhLLTUlnm8sP+V/8wYVIVyMXiZaY6I0QokFYPpJe1ip8m/m/le3zOOHc7yAR0t2jL3k8t18tZ/iiu7.fFwkjA8c6xJ+juObcbg1TM8Sa8UjM76GfPYXvqtvI3EUk3biHQcJ6Oik3l59VOm2tpLOyi5KDFZoDX17Tn9YvodSokrTjG4nwwmnZpTaRvHkuHbEoCGqbZv0nndXLaof">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -392,7 +392,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="col-md-6 map1">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJPXNH22yWMioR0FXfNbXwBAM" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJPXNH22yWMioR0FXfNbXwBAM" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6 map2">
                 <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJTw5JI2wFdkgR6lLDgDYDaAI" allowfullscreen=""></iframe></div>
