--- a/marketing.html
+++ b/marketing.html
@@ -34,11 +34,11 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="#">
+                    <a href="index.html">
                         <span class="p-2 mbr-iconfont socicon-pixiv socicon" style="color: rgb(19, 57, 150); fill: rgb(19, 57, 150);"></span>
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption mbr-bold text-primary display-5" href="#">IXALATTE</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption mbr-bold text-primary display-5" href="index.html">IXALATTE</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
