--- a/websites.html
+++ b/websites.html
@@ -37,11 +37,11 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="#">
+                    <a href="index.html">
                         <span class="p-2 mbr-iconfont socicon-pixiv socicon" style="color: rgb(19, 57, 150); fill: rgb(19, 57, 150);"></span>
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption mbr-bold text-primary display-5" href="#">IXALATTE</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption mbr-bold text-primary display-5" href="index.html">IXALATTE</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -78,12 +78,12 @@
                     
                 </div>
                 <div class="wrap">
-                    <img src="assets/images/16.svg" alt="" class="image-1 animated-elements1">
-                    <img src="assets/images/27.svg" alt="" class="image-2 animated-elements2">
-                    <img src="assets/images/38.svg" alt="" class="image-3 animated-elements3">
-                    <img src="assets/images/49.svg" alt="" class="image-4 animated-elements4">
-                    <img src="assets/images/510.svg" alt="" class="image-5 animated-elements5">
-                    <img src="assets/images/611.svg" alt="" class="image-6 animated-elements6">
+                    <img src="assets/images/112.svg" alt="" class="image-1 animated-elements1">
+                    <img src="assets/images/213.svg" alt="" class="image-2 animated-elements2">
+                    <img src="assets/images/314.svg" alt="" class="image-3 animated-elements3">
+                    <img src="assets/images/415.svg" alt="" class="image-4 animated-elements4">
+                    <img src="assets/images/516.svg" alt="" class="image-5 animated-elements5">
+                    <img src="assets/images/617.svg" alt="" class="image-6 animated-elements6">
                 </div>
             </div>
         </div>
@@ -214,12 +214,12 @@ Integrations <br>Unlimited Bandwidth
                 </div>
             </div>
             <div class="wrap">
-                <img src="assets/images/16.svg" alt="" class="image-1 animated-elements1">
-                <img src="assets/images/27.svg" alt="" class="image-2 animated-elements2">
-                <img src="assets/images/38.svg" alt="" class="image-3 animated-elements3">
-                <img src="assets/images/49.svg" alt="" class="image-4 animated-elements4">
-                <img src="assets/images/510.svg" alt="" class="image-5 animated-elements5">
-                <img src="assets/images/611.svg" alt="" class="image-6 animated-elements6">
+                <img src="assets/images/112.svg" alt="" class="image-1 animated-elements1">
+                <img src="assets/images/213.svg" alt="" class="image-2 animated-elements2">
+                <img src="assets/images/314.svg" alt="" class="image-3 animated-elements3">
+                <img src="assets/images/415.svg" alt="" class="image-4 animated-elements4">
+                <img src="assets/images/516.svg" alt="" class="image-5 animated-elements5">
+                <img src="assets/images/617.svg" alt="" class="image-6 animated-elements6">
             </div>
         </div>
 
@@ -249,7 +249,7 @@ Integrations <br>Unlimited Bandwidth
                 </div>
             </div>
             <div class="col-lg-6 my-auto pb-4 mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="d77clemOqVwoRdjvKgRpvJPF/YFNbbaUE1doM8nzIaUnQ15AApPO9bRGKbQn4HNyp49ZPlRJSJqsPq9cniQSDE/YuH2OUSQDRYtsv14QCBk5UZY24f82yQ6u8RAL2RzK.EELGhle3asS0f8AUm/sBi/NaAGC+iCv9nPWhORZWbTmz0mJdkYht4UkjljtXc7Mi7z8J3UeS2pWeYH7w7UYL9vcJAqXIzX1Q6HX7ivLFm9PnkxlwLpNU9HoRtIPq+FqP">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="M4EsYTKP5i9Pq9YzWfo+ej6Pf8XmDJwSu+p8lK2WLWjsefK6hV3T6C/GWCn7/9G8OdzvuUva/PTcVZKE4SOxKD34UP0DEzDICFaquv7M69FY9Uylv2SN7JpcKI3D2oOH.Is+13rWaLBQlFxQkR2u3Ms0C4GHQRGswxBFOTYR5dEM/XtuqdKqGHDOCoKmN6vv6a1v85Iq3V+pTNeLX62NoS6XXYmcT6s564lpfb/8Ca8kWjPhVbQPaZXfYR6S2HnG1">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
