create github pages

--- a/websites.html
+++ b/websites.html
@@ -78,12 +78,12 @@
                     
                 </div>
                 <div class="wrap">
-                    <img src="assets/images/112.svg" alt="" class="image-1 animated-elements1">
-                    <img src="assets/images/213.svg" alt="" class="image-2 animated-elements2">
-                    <img src="assets/images/314.svg" alt="" class="image-3 animated-elements3">
-                    <img src="assets/images/415.svg" alt="" class="image-4 animated-elements4">
-                    <img src="assets/images/516.svg" alt="" class="image-5 animated-elements5">
-                    <img src="assets/images/617.svg" alt="" class="image-6 animated-elements6">
+                    <img src="assets/images/10.svg" alt="" class="image-1 animated-elements1">
+                    <img src="assets/images/21.svg" alt="" class="image-2 animated-elements2">
+                    <img src="assets/images/32.svg" alt="" class="image-3 animated-elements3">
+                    <img src="assets/images/43.svg" alt="" class="image-4 animated-elements4">
+                    <img src="assets/images/54.svg" alt="" class="image-5 animated-elements5">
+                    <img src="assets/images/65.svg" alt="" class="image-6 animated-elements6">
                 </div>
             </div>
         </div>
@@ -112,8 +112,7 @@
                         </div>
                         <div class="card-box">
                             <h4 class="card-title align-left mbr-regular mbr-fonts-style display-7"><strong>
-                                    Basic
-                                </strong><br>Simple visual</h4>
+                                    Basic</strong><br>Simple visual</h4>
                             <p class="mbr-text mbr-fonts-style align-left display-4">One Page<br>Secure Hosting<br>Links: Email, Phone<br>Social Media<br>24/7 Support<br></p>
                             <div class="align-left mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="websites.html#forms02-g">PURCHASE</a></div>
                         </div>
@@ -162,7 +161,7 @@
                             <p class="price-text align-right mbr-regular mbr-fonts-style pt-2 align-left display-4">PER YEAR</p>
                         </div>
                         <div class="card-box">
-                            <h4 class="card-title align-left mbr-regular mbr-fonts-style display-7"><strong>Basic &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</strong><br>We Think Ahead</h4>
+                            <h4 class="card-title align-left mbr-regular mbr-fonts-style display-7"><strong>Basic</strong><br>We Think Ahead</h4>
                             <p class="mbr-text mbr-fonts-style align-left display-4">One Page
 <br>Secure Hosting
 <br>Links: Email, Phone
@@ -179,8 +178,7 @@
                             <p class="price-text mbr-fonts-style pt-2 align-right mbr-regular display-4">PER YEAR</p>
                         </div>
                         <div class="card-box">
-                            <h4 class="card-title align-left mbr-regular mbr-fonts-style display-7"><strong>Business
-                                </strong><br><strong> </strong>
+                            <h4 class="card-title align-left mbr-regular mbr-fonts-style display-7"><strong>Business</strong><br><strong> </strong>
                                 Special Offer
                             </h4>
                             <p class="mbr-text mbr-fonts-style align-left display-4">1emplate design
@@ -214,12 +212,12 @@ Integrations <br>Unlimited Bandwidth
                 </div>
             </div>
             <div class="wrap">
-                <img src="assets/images/112.svg" alt="" class="image-1 animated-elements1">
-                <img src="assets/images/213.svg" alt="" class="image-2 animated-elements2">
-                <img src="assets/images/314.svg" alt="" class="image-3 animated-elements3">
-                <img src="assets/images/415.svg" alt="" class="image-4 animated-elements4">
-                <img src="assets/images/516.svg" alt="" class="image-5 animated-elements5">
-                <img src="assets/images/617.svg" alt="" class="image-6 animated-elements6">
+                <img src="assets/images/10.svg" alt="" class="image-1 animated-elements1">
+                <img src="assets/images/21.svg" alt="" class="image-2 animated-elements2">
+                <img src="assets/images/32.svg" alt="" class="image-3 animated-elements3">
+                <img src="assets/images/43.svg" alt="" class="image-4 animated-elements4">
+                <img src="assets/images/54.svg" alt="" class="image-5 animated-elements5">
+                <img src="assets/images/65.svg" alt="" class="image-6 animated-elements6">
             </div>
         </div>
 
@@ -249,7 +247,7 @@ Integrations <br>Unlimited Bandwidth
                 </div>
             </div>
             <div class="col-lg-6 my-auto pb-4 mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="M4EsYTKP5i9Pq9YzWfo+ej6Pf8XmDJwSu+p8lK2WLWjsefK6hV3T6C/GWCn7/9G8OdzvuUva/PTcVZKE4SOxKD34UP0DEzDICFaquv7M69FY9Uylv2SN7JpcKI3D2oOH.Is+13rWaLBQlFxQkR2u3Ms0C4GHQRGswxBFOTYR5dEM/XtuqdKqGHDOCoKmN6vv6a1v85Iq3V+pTNeLX62NoS6XXYmcT6s564lpfb/8Ca8kWjPhVbQPaZXfYR6S2HnG1">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="nk17Xi/P80GLsY3Y8sE2L06weEqMZRycv0DIGH0h07/DJStBb05wgH4n9wU4TOt7ph74bu4T7IiACOcuKB/rMRjccGi158wppn43ay+mBpR/CQFS42vgDg1/Wukw39KO.Ia8YeL+I/9VbMcTXeJu609mHk4YK8vyI3ZR/2wEirrm7be2UrFSF2Zgd80UGPj87RDNmYKB6NgDSdZbnBn5YniJ3kmDLgcjpdOWa+50itQmFf7P3EkYV5wMGp0GzBJFC">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
