--- a/marketing.html
+++ b/marketing.html
@@ -54,7 +54,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-primary display-5" href="websites.html" aria-expanded="false">
                             #Websites</a></li><li class="nav-item"><a class="nav-link link text-primary display-5" href="marketing.html" aria-expanded="false">
-                            #Marketing</a></li><li class="nav-item"><a class="nav-link link text-primary display-5" href="marketing.html" aria-expanded="false">
+                            #Marketing</a></li><li class="nav-item"><a class="nav-link link text-primary display-5" href="social.html" aria-expanded="false">
                             #Social</a></li></ul>
                 
                 
@@ -79,12 +79,12 @@
                         <a class="btn btn-sm btn-white-outline display-7" href="#"><span class="mobi-mbri mobi-mbri-growing-chart mbr-iconfont mbr-iconfont-btn"></span>Organic <br>Marketing</a></div>
                 </div>
                 <div class="wrap">
-                    <img src="assets/images/10.svg" alt="" class="image-1 animated-elements1">
-                    <img src="assets/images/21.svg" alt="" class="image-2 animated-elements2">
-                    <img src="assets/images/32.svg" alt="" class="image-3 animated-elements3">
-                    <img src="assets/images/43.svg" alt="" class="image-4 animated-elements4">
-                    <img src="assets/images/54.svg" alt="" class="image-5 animated-elements5">
-                    <img src="assets/images/65.svg" alt="" class="image-6 animated-elements6">
+                    <img src="assets/images/16.svg" alt="" class="image-1 animated-elements1">
+                    <img src="assets/images/27.svg" alt="" class="image-2 animated-elements2">
+                    <img src="assets/images/38.svg" alt="" class="image-3 animated-elements3">
+                    <img src="assets/images/49.svg" alt="" class="image-4 animated-elements4">
+                    <img src="assets/images/510.svg" alt="" class="image-5 animated-elements5">
+                    <img src="assets/images/611.svg" alt="" class="image-6 animated-elements6">
                 </div>
             </div>
         </div>
@@ -169,16 +169,16 @@
                     </p>
                 </div>
                 <div class="wrap">
-                    <img src="assets/images/10.svg" alt="" class="image-1 animated-elements1">
-                    <img src="assets/images/21.svg" alt="" class="image-2 animated-elements2">
-                    <img src="assets/images/32.svg" alt="" class="image-3 animated-elements3">
-                    <img src="assets/images/43.svg" alt="" class="image-4 animated-elements4">
-                    <img src="assets/images/54.svg" alt="" class="image-5 animated-elements5">
-                    <img src="assets/images/65.svg" alt="" class="image-6 animated-elements6">
+                    <img src="assets/images/16.svg" alt="" class="image-1 animated-elements1">
+                    <img src="assets/images/27.svg" alt="" class="image-2 animated-elements2">
+                    <img src="assets/images/38.svg" alt="" class="image-3 animated-elements3">
+                    <img src="assets/images/49.svg" alt="" class="image-4 animated-elements4">
+                    <img src="assets/images/510.svg" alt="" class="image-5 animated-elements5">
+                    <img src="assets/images/611.svg" alt="" class="image-6 animated-elements6">
                 </div>
             </div>
             <div class="col-lg-6 my-auto pb-4 mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="yBzUP7wuPCiE4lftv69nyjmJYKIte/kfae8WjWOZkdN31TL70GbHm9ZAu9akoj7C/V+lSQpM9qap8waw05Vi+mpYJJh+OOAu6FanrD8otOgq6pNCjGc9LYbpTDHRg88r.utkZ7PZ4nEdc31Dk7BaxdlFKpeFichHhyWEsdeIfKv9sAykOUpkciOBWA4BzOwubA4BJ+wzCU3oF91M4Vf5e2pzn5VhqnWmqTeGqHVuMgaWDI2Zqq1zZBBUhqVDpglBw">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="VMtm09zQR7vRM+ZYKC5kYpXQrWFEmtU7pLhcdQ+RZR0bxyB9TShNq61XQxdFQeq5z8JPiGZQx7U1xUxojIIwSMLZjrIsT6ofPdjHZQDuy0ETUN9gqbhrWRPpPhZlQW4I.qOjpYyCODTdd8mBkGk2Evn9gtYj9/sqbvHlqwF1OfHlLz/hBSTb/Sf14FM2sfPqsOa660horIUa8d7IbJUKhoxPOO0ZxNGx9/gs08j+BZumtWwIRMm6/Ul2fvuIs16j3">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
