--- a/marketing.html
+++ b/marketing.html
@@ -75,16 +75,16 @@
                 
                 
                 <div class="buttons-block">
-                    <div class="align-center mbr-section-btn"><a class="btn btn-sm btn-white-outline display-7" href="#"><span class="icon54-v4-mouse-pointer-1 mbr-iconfont mbr-iconfont-btn"></span>Pay <br>Per Click</a>
-                        <a class="btn btn-sm btn-white-outline display-7" href="#"><span class="mobi-mbri mobi-mbri-growing-chart mbr-iconfont mbr-iconfont-btn"></span>Organic <br>Marketing</a></div>
+                    <div class="align-center mbr-section-btn"><a class="btn btn-sm btn-white-outline display-7" href="marketing.html#header03-j"><span class="icon54-v4-mouse-pointer-1 mbr-iconfont mbr-iconfont-btn"></span>Pay <br>Per Click</a>
+                        <a class="btn btn-sm btn-white-outline display-7" href="marketing.html#header04-k"><span class="mobi-mbri mobi-mbri-growing-chart mbr-iconfont mbr-iconfont-btn"></span>Organic <br>Marketing</a></div>
                 </div>
                 <div class="wrap">
-                    <img src="assets/images/16.svg" alt="" class="image-1 animated-elements1">
-                    <img src="assets/images/27.svg" alt="" class="image-2 animated-elements2">
-                    <img src="assets/images/38.svg" alt="" class="image-3 animated-elements3">
-                    <img src="assets/images/49.svg" alt="" class="image-4 animated-elements4">
-                    <img src="assets/images/510.svg" alt="" class="image-5 animated-elements5">
-                    <img src="assets/images/611.svg" alt="" class="image-6 animated-elements6">
+                    <img src="assets/images/112.svg" alt="" class="image-1 animated-elements1">
+                    <img src="assets/images/213.svg" alt="" class="image-2 animated-elements2">
+                    <img src="assets/images/314.svg" alt="" class="image-3 animated-elements3">
+                    <img src="assets/images/415.svg" alt="" class="image-4 animated-elements4">
+                    <img src="assets/images/516.svg" alt="" class="image-5 animated-elements5">
+                    <img src="assets/images/617.svg" alt="" class="image-6 animated-elements6">
                 </div>
             </div>
         </div>
@@ -169,16 +169,16 @@
                     </p>
                 </div>
                 <div class="wrap">
-                    <img src="assets/images/16.svg" alt="" class="image-1 animated-elements1">
-                    <img src="assets/images/27.svg" alt="" class="image-2 animated-elements2">
-                    <img src="assets/images/38.svg" alt="" class="image-3 animated-elements3">
-                    <img src="assets/images/49.svg" alt="" class="image-4 animated-elements4">
-                    <img src="assets/images/510.svg" alt="" class="image-5 animated-elements5">
-                    <img src="assets/images/611.svg" alt="" class="image-6 animated-elements6">
+                    <img src="assets/images/112.svg" alt="" class="image-1 animated-elements1">
+                    <img src="assets/images/213.svg" alt="" class="image-2 animated-elements2">
+                    <img src="assets/images/314.svg" alt="" class="image-3 animated-elements3">
+                    <img src="assets/images/415.svg" alt="" class="image-4 animated-elements4">
+                    <img src="assets/images/516.svg" alt="" class="image-5 animated-elements5">
+                    <img src="assets/images/617.svg" alt="" class="image-6 animated-elements6">
                 </div>
             </div>
             <div class="col-lg-6 my-auto pb-4 mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="VMtm09zQR7vRM+ZYKC5kYpXQrWFEmtU7pLhcdQ+RZR0bxyB9TShNq61XQxdFQeq5z8JPiGZQx7U1xUxojIIwSMLZjrIsT6ofPdjHZQDuy0ETUN9gqbhrWRPpPhZlQW4I.qOjpYyCODTdd8mBkGk2Evn9gtYj9/sqbvHlqwF1OfHlLz/hBSTb/Sf14FM2sfPqsOa660horIUa8d7IbJUKhoxPOO0ZxNGx9/gs08j+BZumtWwIRMm6/Ul2fvuIs16j3">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="BnUjThqXvpv+JAVYOgNcuoqb3+L1IGFv87mrc8T5lnBs9lsW2uRCVP34I3YIIQjzDfHlo5PTLtbJ34pbdYWFLYgkS/0MlGsVn2e0C8gGNZXQOXy5wLOcBNFhNcmif/Xr.LssYeaFZ9IMceWmxQHRX64Od7oxaIxdhGIeyJPf5+QQBBodfOZUB9vXL+egtvpZsKobm7qobSOuySsrzDOpzsYWfpSoYRwP8WUGOLswsFKAR8AZSkVj7FSt+i1gDQlJN">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
